Upgrade airbase to 307